# movie-suggestions

./: .gitignore  README.md  pyproject.toml  requirements.txt
mv_suggest/: main.py
mv_suggest/styles/: styles.tcss
mv_suggest/utils/: helper.py
src/: main.ipynb  main.py  mv-suggest.py
src/mv_suggest/: main.py
src/styles/: styles.tcss
src/tcss/: styles.tcss
src/utils/: api_calls.py  cli.py  helper.py  messages.py  widgets.py
