
[build-system]
requires = ["hatchling>=1.7.0", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "mv_suggest"
version = "0.0.1"
authors = [
  { name="Mattia Silvestri", email="mattiasilvestri27@gmail.com" },
  ]
description = "Movie suggester"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
  "movies",
  "recommendations",
  "tftdf",
]
license = {text = "GPLv3"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel.force-include]
"styles" = "mv_suggest/styles"

[project.scripts]
energy-monitor = "mv_suggest.main:main"

target-version = ["py38", "py39", "py310", "py311"]

[tool.black]
line-length = 88

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = ["C", "R", "missing-module-docstring", "missing-function-docstring",
"import-error"]

[tool.pylint.miscellaneous]
# List of note tags to take in consideration, separated by a comma.
notes = ["FIXME", "TODO"]
